fix ac button and text overflow

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ button {
 }
 #bigger-text {
   height: 64px;
-  font-size: 64px;
+  font-size: 48px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
